bug: fix icon alignment on landing page
- ensure tests are passing
- remove margin on font-awesome icon

[Finishes #165755873]

--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -179,6 +179,10 @@ i.far {
   font-weight: 600;
 }
 
+.circle-icon i.fas {
+  margin-right: 0;
+}
+
 .container {
   background: #dfe0e2;
   padding: 50px 40px 130px;
